ADM HOME __DESIGN__

--- a/app_/views/home/index.ejs
+++ b/app_/views/home/index.ejs
@@ -13,95 +13,100 @@
 
 <body x-data="{ dark: true }" x-bind:class="dark?'dark':'light'">
     <%- include('../layouts/header_menu.ejs') %>
-
-    <div class="flex items-center justify-center">
-      <form action="home" method="post" class="px-10 py-5 bg-gray-200 rounded-lg font-mono grid">
-        <p class="my-1">
+    <div class="">
+      <form action="home" method="post" class="px-5 lg:px-10 py-5 my-10 grid gap-2 grid-cols-1 md:grid-cols-3 box-border bg-gray-300 rounded-lg font-mono max-w-[90%] mx-auto">
+        <p class="my-1 flex items-center justify-center flex-wrap col-span-1 md:col-span-3 py-5">
+          <img src="../.<%= admin.profile.photo %>" class="size-20 md:size-32 rounded-full border-2 border-gray-500 p-2 mx-4" alt="profile">
+          <input type="text" name="photo" class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" value="<%= admin.profile.photo %>" required>
+        </p>
+        <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="salut">Salut</label>
-          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" name="salut" id="salut" placeholder="Salut" required>
+          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" value="<%= admin.profile.salut %>" name="salut" id="salut" placeholder="Salut" required>
         </p>
-        <p class="my-1">
+        <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="name">Name</label>
-          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" name="name" id="name" placeholder="Name" required>
+          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" value="<%= admin.profile.name %>" name="name" id="name" placeholder="Name" required>
         </p>
-        <p class="my-1">
+        <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="title">Title</label>
-          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" name="title" id="title" placeholder="Title" required>
+          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text"value="<%= admin.profile.title %>" name="title" id="title" placeholder="Title" required>
         </p>
-        <p class="my-1">
+        <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="email">Email</label>
-          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="email" name="email" id="email" placeholder="Email" readonly>
+          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="email" value="<%= admin.contact.emails[0] %>" name="email" id="email" placeholder="Email" readonly>
         </p>
-        <p class="my-1">
+        <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="tel">Tel</label>
-          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="tel" name="tel" id="tel" placeholder="Tel" readonly>
+          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="tel" value="<%= admin.contact.tels[0] %>" name="tel" id="tel" placeholder="Tel" readonly>
         </p>
-        <p class="my-1">
+        <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="address">Address</label>
-          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" name="address" id="address" placeholder="Address" readonly>
+          <input class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" type="text" value="<%= admin.contact.address.short %>" name="address" id="address" placeholder="Address" readonly>
         </p>
-        <fieldset class="border-2 border-gray-500 p-4 text-center">
+        <fieldset class="border-2 border-gray-500 col-span-1 md:col-span-3 p-4 text-center w-full">
           <legend class="p-2">Social</legend>
-          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4">
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <img id="fb_icon_l" alt="fb_icon_light" class="size-32 rounded-full border-2 border-gray-300 p-1">
-              <img id="fb_icon_d" alt="fb_icon_dark" class="size-32 rounded-full border-2 border-gray-300 p-1">
+          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4 w-full">
+            <p class="flex items-center justify-center my-2 gap-4 flex-wrap">
+              <img id="fb_icon_l" src="<%= admin.contact.socials[0].icon[0] %>" alt="fb_icon_light" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
+              <img id="fb_icon_d" src="<%= admin.contact.socials[0].icon[1] %>" alt="fb_icon_dark" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
             </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="fb_icon_l.src = this.value" type="text" name="fb_icon_light" id="fb_icon_light" placeholder="Light icon url" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="fb_icon_d.src = this.value" type="text" name="fb_icon_dark" id="fb_icon_dark" placeholder="Dark icon url">
+            <p class="flex items-center justify-center my-2 gap-4 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="fb_icon_l.src = this.value" type="text" value="<%= admin.contact.socials[0].icon[0] %>" name="fb_icon_light" id="fb_icon_light" placeholder="Light icon url" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="fb_icon_d.src = this.value" type="text" value="<%= admin.contact.socials[0].icon[1] %>" name="fb_icon_dark" id="fb_icon_dark" placeholder="Dark icon url" required>
             </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="fb_social_name" id="fb_social_name" placeholder="Social name" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="fb_social_uri" id="fb_social_uri" placeholder="Social uri" required>
+            <p class="flex items-center justify-center my-2 gap-4 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[0].name %>" name="fb_social_name" id="fb_social_name" placeholder="Social name" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[0].uri %>" name="fb_social_uri" id="fb_social_uri" placeholder="Social uri" required>
+          </div>
+
+          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4 w-full">
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <img id="insta_icon_l" src="<%= admin.contact.socials[1].icon[0] %>" alt="insta_icon_light" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
+              <img id="insta_icon_d" src="<%= admin.contact.socials[1].icon[1] %>" alt="insta_icon_dark" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
+            </p>
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="insta_icon_l.src = this.value" type="text" value="<%= admin.contact.socials[1].icon[0] %>" name="insta_icon_light" id="insta_icon_light" placeholder="Light icon url" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="insta_icon_d.src = this.value" type="text" value="<%= admin.contact.socials[1].icon[1] %>" name="insta_icon_dark" id="insta_icon_dark" placeholder="Dark icon url" required>
+            </p>
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[1].name %>" name="insta_social_name" id="insta_social_name" placeholder="Social name" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[1].uri %>" name="insta_social_uri" id="insta_social_uri" placeholder="Social uri" required>
             </p>
           </div>
 
-          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4">
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <img id="insta_icon_l" alt="insta_icon_light" class="size-32 rounded-full border-2 border-gray-300 p-1">
-              <img id="insta_icon_d" alt="insta_icon_dark" class="size-32 rounded-full border-2 border-gray-300 p-1">
+          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4 w-full">
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <img id="git_icon_l" src="<%= admin.contact.socials[2].icon[0] %>" alt="git_icon_light" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
+              <img id="git_icon_d" src="<%= admin.contact.socials[2].icon[1] %>" alt="git_icon_dark" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
             </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="insta_icon_l.src = this.value" type="text" name="insta_icon_light" id="insta_icon_light" placeholder="Light icon url" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="insta_icon_d.src = this.value" type="text" name="insta_icon_dark" id="insta_icon_dark" placeholder="Dark icon url">
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="git_icon_l.src = this.value" type="text" value="<%= admin.contact.socials[2].icon[0] %>" name="git_icon_light" id="git_icon_light" placeholder="Light icon url" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="git_icon_d.src = this.value" type="text" value="<%= admin.contact.socials[2].icon[1] %>" name="git_icon_dark" id="git_icon_dark" placeholder="Dark icon url" required>
             </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="insta_social_name" id="insta_social_name" placeholder="Social name" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="insta_social_uri" id="insta_social_uri" placeholder="Social uri" required>
-            </p>
-          </div>
-
-          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4">
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <img id="git_icon_l" alt="git_icon_light" class="size-32 rounded-full border-2 border-gray-300 p-1">
-              <img id="git_icon_d" alt="git_icon_dark" class="size-32 rounded-full border-2 border-gray-300 p-1">
-            </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="git_icon_l.src = this.value" type="text" name="git_icon_light" id="git_icon_light" placeholder="Light icon url" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="git_icon_d.src = this.value" type="text" name="git_icon_dark" id="git_icon_dark" placeholder="Dark icon url">
-            </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="git_social_name" id="git_social_name" placeholder="Social name" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="git_social_uri" id="git_social_uri" placeholder="Social uri" required>
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[2].name %>" name="git_social_name" id="git_social_name" placeholder="Social name" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[2].uri %>" name="git_social_uri" id="git_social_uri" placeholder="Social uri" required>
             </p>
           </div>
 
-          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4">
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <img id="tel_icon_l" alt="tel_icon_light" class="size-32 rounded-full border-2 border-gray-300 p-1">
-              <img id="tel_icon_d" alt="tel_icon_dark" class="size-32 rounded-full border-2 border-gray-300 p-1">
+          <div class="p-4 rounded-lg bg-gray-600 text-gray-200 my-4 w-full">
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <img id="tel_icon_l" src="<%= admin.contact.socials[3].icon[0] %>" alt="tel_icon_light" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
+              <img id="tel_icon_d" src="<%= admin.contact.socials[3].icon[1] %>" alt="tel_icon_dark" class="size-14 md:size-32 rounded-full border-2 border-gray-300 p-1">
             </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="tel_icon_l.src = this.value" type="text" name="tel_icon_light" id="tel_icon_light" placeholder="Light icon url" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" onchange="tel_icon_d.src = this.value" type="text" name="tel_icon_dark" id="tel_icon_dark" placeholder="Dark icon url">
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="tel_icon_l.src = this.value" type="text" value="<%= admin.contact.socials[3].icon[0] %>" name="tel_icon_light" id="tel_icon_light" placeholder="Light icon url" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" onchange="tel_icon_d.src = this.value" type="text" value="<%= admin.contact.socials[3].icon[1] %>" name="tel_icon_dark" id="tel_icon_dark" placeholder="Dark icon url" required>
             </p>
-            <p class="flex items-center justify-around my-2 gap-2 flex-wrap">
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="tel_social_name" id="tel_social_name" placeholder="Social name" required>
-              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" type="text" name="tel_social_uri" id="tel_social_uri" placeholder="Social uri" required>
+            <p class="flex items-center justify-center my-2 gap-2 flex-wrap">
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[3].name %>" name="tel_social_name" id="tel_social_name" placeholder="Social name" required>
+              <input class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none w-full sm:w-[40%]" type="text" value="<%= admin.contact.socials[3].uri %>" name="tel_social_uri" id="tel_social_uri" placeholder="Social uri" required>
             </p>
           </div>
         </fieldset>
+        <p class="my-4 col-span-1 md:col-span-3 text-center">
+          <button disabled class="py-2 px-5 border-2 border-green-700 hover:bg-green-700 text-xl text-green-600 hover:text-white rounded-md">Save Changes</button>
+        </p>
       </form>
     </div>
 
