--- a/app_/views/admin/dashboard.ejs
+++ b/app_/views/admin/dashboard.ejs
@@ -6,7 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="../../imgs/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../../styles/app.css" />
+    <!-- <link rel="stylesheet" href="../../styles/app.css" /> -->
+    <script defer src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script defer type="module" src="../../scripts/menu.js"></script>
   </head>
@@ -16,6 +17,5 @@
 
     <h1>ADMIN DASHBOARD</h1>
 
-    <%= access %>
 </body>
 </html>
