--- a/app_/views/home/index.ejs
+++ b/app_/views/home/index.ejs
@@ -16,7 +16,7 @@
     <div class="">
       <form action="home" method="post" class="px-5 lg:px-10 py-5 my-10 grid gap-2 grid-cols-1 md:grid-cols-3 box-border bg-gray-300 rounded-lg font-mono max-w-[90%] mx-auto">
         <p class="my-1 flex items-center justify-center flex-wrap col-span-1 md:col-span-3 py-5">
-          <img src="../.<%= admin.profile.photo %>" class="size-20 md:size-32 rounded-full border-2 border-gray-500 p-2 mx-4" alt="profile">
+          <img src="../.<%= admin.profile.photo %>" class="size-20 md:size-32 rounded-full border-2 border-gray-500 p-2 m-4" alt="profile">
           <input type="text" name="photo" class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" value="<%= admin.profile.photo %>" required>
         </p>
         <p class="my-1 text-center">
