--- a/app_/views/home/index.ejs
+++ b/app_/views/home/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="../../imgs/logo.png" type="image/x-icon">
     <!-- <link rel="stylesheet" href="../../styles/app.css" /> -->
-    <script defer src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script defer type="module" src="../../scripts/menu.js"></script>
   </head>
@@ -15,9 +15,12 @@
     <%- include('../layouts/header_menu.ejs') %>
     <div class="">
       <form action="home" method="post" class="px-5 lg:px-10 py-5 my-10 grid gap-2 grid-cols-1 md:grid-cols-3 box-border bg-gray-300 rounded-lg font-mono max-w-[90%] mx-auto">
+        <p class="hidden">
+          <input type="text" name="token" id="token" value="<%= admin.token %>">
+        </p>
         <p class="my-1 flex items-center justify-center flex-wrap col-span-1 md:col-span-3 py-5">
-          <img src="../.<%= admin.profile.photo %>" class="size-20 md:size-32 rounded-full border-2 border-gray-500 p-2 m-4" alt="profile">
-          <input type="text" name="photo" class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" value="<%= admin.profile.photo %>" required>
+          <img id="photo_view" src="<%= admin.profile.photo %>" class="size-20 md:size-32 rounded-full border-2 border-gray-500 p-2 m-4" alt="profile">
+          <input type="text" onchange="photo_view.src = this.value" name="photo" class="bg-transparent ring-1 focus:ring-2 py-1 px-2 rounded-md outline-none" value="<%= admin.profile.photo %>" required>
         </p>
         <p class="my-1 text-center">
           <label class="block my-2 text-gray-600" for="salut">Salut</label>
@@ -105,7 +108,7 @@
           </div>
         </fieldset>
         <p class="my-4 col-span-1 md:col-span-3 text-center">
-          <button disabled class="py-2 px-5 border-2 border-green-700 hover:bg-green-700 text-xl text-green-600 hover:text-white rounded-md">Save Changes</button>
+          <button class="py-2 px-5 border-2 border-green-700 hover:bg-green-700 text-xl text-green-600 hover:text-white rounded-md">Save Changes</button>
         </p>
       </form>
     </div>
