--- a/app_/views/admin/dashboard.ejs
+++ b/app_/views/admin/dashboard.ejs
@@ -3,13 +3,7 @@
 <html lang="en">
   <head>
     <title>Admin | Dashboard</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="../../imgs/logo.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="../../styles/app.css" /> -->
-    <script defer src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script defer type="module" src="../../scripts/menu.js"></script>
+    <%- include('../layouts/header.ejs') %>
   </head>
 
 <body x-data="{ dark: true }" x-bind:class="dark?'dark':'light'">
