--- a/app_/views/skills/index.ejs
+++ b/app_/views/skills/index.ejs
@@ -4,17 +4,75 @@
 <html lang="en">
   <head>
     <title>Admin | Skills</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="../../imgs/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../../styles/app.css" />
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script defer type="module" src="../../scripts/menu.js"></script>
+    <%- include('../layouts/header.ejs') %>
   </head>
 
 <body x-data="{ dark: true }" x-bind:class="dark?'dark':'light'">
     <%- include('../layouts/header_menu.ejs') %>
 
-    <h1>ADMIN SKILLS</h1>
+    <div x-data="{ show: false }">
+      <button x-show="!show" @click=" show = true " class="border-2 m-5 py-2 px-4 rounded-lg text-gray-600 border-gray-300 mt-4 hover:border-gray-600 focus:border-gray-600 hover:text-gray-600 focus:text-gray-600">New skill</button>
+      <div x-show="!show" class="flex items-center justify-around gap-4 flex-wrap px-5 py-10" id="skills">
+        <% if (skills.length == 0) { %>
+         <p class="text-2xl font-light text-red-500">No skills found!</p>
+        <% } else { %>
+          <% skills.forEach((skill, i) => { %>
+            <div class="bg-gray-700 text-gray-100 p-4 rounded-lg">
+              <form action="skills/edit" method="post">
+                <p class="hidden">
+                  <input type="text" name="token" value="<%= token %>">
+                  <input type="text" name="id" value="<%= skill._id %>">
+                </p>
+                <div>
+                  <p>
+                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="text" value="<%= skill.name %>" name="name" id="name" placeholder="Name" required>
+                  </p>
+                  <p class="bg-transparent px-2 py-1 text-center ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none">
+                    <label id="acquis_percent_<%= i %>"><%= skill.acquis %>%</label>
+                    <input class="w-full" value="<%= skill.acquis %>"  onchange="document.getElementById('acquis_percent_<%= i %>').innerHTML = this.value + '%'" type="range"  name="acquis" id="acquis" max="100" min="0" required>
+                  </p>
+                  <p>
+                    <textarea class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" name="info" id="info" placeholder="Info" required> <%= skill.info %> </textarea>
+                  </p>
+                </div>
+                <p>
+                  <button type="submit" class="border-2 py-2 w-full my-2 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Save</button>
+                </p>
+              </form>
+              <form class="w-full mt-4 my-2" action="skills/delete" method="post">
+                <p class="hidden">
+                  <input type="text" name="token" value="<%= token %>">
+                  <input type="text" name="id" value="<%= skill._id %>">
+                </p>
+                <button class="border-2 w-full py-2 px-4 rounded-lg text-red-300 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Remove</button>
+              </form>
+            </div>
+          <% }) %>
+        <% } %>
+      </div>
+      <div x-show="show" class="flex items-center justify-center px-5 py-10">
+        <form action="skills/new" method="post" class="px-10 py-5 rounded-lg bg-gray-800">
+          <p class="hidden">
+            <input type="text" name="token" value="<%= token %>">
+          </p>
+          <div>
+            <p>
+              <input class="bg-transparent w-full px-2 py-1 text-center text-gray-200 ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
+            </p>
+            <p class="bg-transparent px-2 py-1 text-center text-gray-200 ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none">
+              <label id="acquis_percent">0%</label>
+              <input class="w-full" value="0"  onchange="acquis_percent.innerHTML = this.value + '%'" type="range" name="acquis" id="acquis" max="100" min="0" required>
+            </p>
+            <p>
+              <textarea class="bg-transparent w-full px-2 py-1 text-center text-gray-200 ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" name="info" id="info" placeholder="Info" required></textarea>
+            </p>
+          </div>
+          <p class="flex gap-4 flex-wrap items-center justify-center">
+            <button @click=" show = false " type="button" class="border-2 w-[45%] max-w-full py-2 px-4 rounded-lg text-red-300 mt-4 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Cancel</button>
+            <button type="submit" class="border-2 py-2 w-[45%] max-w-full px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Add</button>
+          </p>
+        </form>
+      </div>
+    </div>
 </body>
 </html>
