--- a/app_/views/layouts/header_menu.ejs
+++ b/app_/views/layouts/header_menu.ejs
@@ -44,7 +44,7 @@
             <button class="m-op-03 cursor-default"><a @click="open = false" class="cursor-pointer" href="skills">Skills</a></button>
             </div>
             <div class="flow-root">
-            <button class="m-op-04 cursor-default"><a @click="open = false" class="cursor-pointer" href="experience">Experience</a></button>
+            <button class="m-op-04 cursor-default"><a @click="open = false" class="cursor-pointer" href="experience">Experiences</a></button>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
                 <button class="m-op-01 cursor-default"><a class="cursor-pointer" href="home">Home</a></button>
                 <button class="m-op-02 cursor-default"><a class="cursor-pointer" href="about">About</a></button>
                 <button class="m-op-03 cursor-default"><a class="cursor-pointer" href="skills">Skills</a></button>
-                <button class="m-op-04 cursor-default"><a class="cursor-pointer" href="experience">Experience</a></button>
+                <button class="m-op-04 cursor-default"><a class="cursor-pointer" href="experience">Experiences</a></button>
                 </div>
             </div>
 
