--- a/app_/views/skills/index.ejs
+++ b/app_/views/skills/index.ejs
@@ -18,7 +18,7 @@
         <% } else { %>
           <% skills.forEach((skill, i) => { %>
             <div class="bg-gray-700 text-gray-100 p-4 rounded-lg">
-              <form action="skills/edit" method="post">
+              <form action="skill/edit" method="post">
                 <p class="hidden">
                   <input type="text" name="token" value="<%= token %>">
                   <input type="text" name="id" value="<%= skill._id %>">
@@ -39,19 +39,19 @@
                   <button type="submit" class="border-2 py-2 w-full my-2 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Save</button>
                 </p>
               </form>
-              <form class="w-full mt-4 my-2" action="skills/delete" method="post">
+              <form class="w-full mt-4 my-2" action="skill/delete" method="post">
                 <p class="hidden">
                   <input type="text" name="token" value="<%= token %>">
                   <input type="text" name="id" value="<%= skill._id %>">
                 </p>
-                <button class="border-2 w-full py-2 px-4 rounded-lg text-red-300 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Remove</button>
+                <button class="border-2 w-full py-2 px-4 rounded-lg text-red-300 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Delete</button>
               </form>
             </div>
           <% }) %>
         <% } %>
       </div>
       <div x-show="show" class="flex items-center justify-center px-5 py-10">
-        <form action="skills/new" method="post" class="px-10 py-5 rounded-lg bg-gray-800">
+        <form action="skill/new" method="post" class="px-10 py-5 rounded-lg bg-gray-800">
           <p class="hidden">
             <input type="text" name="token" value="<%= token %>">
           </p>
