--- a/app_/views/experience/index.ejs
+++ b/app_/views/experience/index.ejs
@@ -10,16 +10,16 @@
     <%- include('../layouts/header_menu.ejs') %>
 
     <div class="grid gap-4 grid-cols-1 xl:grid-cols-3">
-      <div x-data="{ show: false }" class="bg-slate-900">
+      <div x-data="{ show: false }" class="bg-gray-900">
         <h1 class="text-center text-white text-2xl font-light my-4">Education</h1>
-        <button x-show="!show" @click=" show = true " class="border-2 m-5 py-2 px-4 rounded-lg text-slate-600 border-slate-600 mt-4 hover:border-slate-400 focus:border-slate-400 hover:text-slate-400 focus:text-slate-400">New education</button>
+        <button x-show="!show" @click=" show = true " class="border-2 m-5 py-2 px-4 rounded-lg text-gray-600 border-gray-600 mt-4 hover:border-gray-400 focus:border-gray-400 hover:text-gray-400 focus:text-gray-400">New education</button>
         <div x-show="!show" class="flex items-center justify-around gap-4 flex-wrap px-5 py-10">
           <% if (educations.length == 0) { %>
             <p class="text-2xl font-light text-red-500">No education found!</p>
           <% } else { %>
             <% educations.forEach((education, i)=>{ %>
-              <div class="bg-slate-700 text-slate-100 p-4 rounded-lg">
-                <form action="experience/education_update" method="post">
+              <div class="bg-gray-700 text-gray-100 p-4 rounded-lg">
+                <form action="experiences/education_update" method="post">
                   <p class="hidden">
                     <input type="text" value="<%= token %>" name="token" id="token" required>
                   </p>
@@ -27,25 +27,25 @@
                     <input type="text" value="<%= education._id %>" name="id" id="id" required>
                   </p>
                   <p>
-                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-slate-300 focus:ring-2 rounded-md my-2 ring-slate-500 outline-none" value="<%= education.name %>" type="text" name="name" id="name" placeholder="Name" required>
+                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" value="<%= education.name %>" type="text" name="name" id="name" placeholder="Name" required>
                   </p>
                   <p>
-                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-slate-300 focus:ring-2 rounded-md my-2 ring-slate-500 outline-none" value="<%= education.place %>" type="text" name="place" id="place" placeholder="Place" required>
+                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" value="<%= education.place %>" type="text" name="place" id="place" placeholder="Place" required>
                   </p>
                   <p>
-                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-slate-300 focus:ring-2 rounded-md my-2 ring-slate-500 outline-none" value="<%= education.date.start %>" type="text" name="start" id="start" placeholder="Start" required>
+                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" value="<%= education.date.start %>" type="text" name="start" id="start" placeholder="Start" required>
                   </p>
                   <p>
-                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-slate-300 focus:ring-2 rounded-md my-2 ring-slate-500 outline-none" value="<%= education.date.end %>" type="text" name="end" id="end" placeholder="End" required>
+                    <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" value="<%= education.date.end %>" type="text" name="end" id="end" placeholder="End" required>
                   </p>
                   <p>
-                    <textarea class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-slate-300 focus:ring-2 rounded-md my-2 ring-slate-500 outline-none" name="details" id="details"  required placeholder="Details"> <%= education.details %> </textarea>
+                    <textarea class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" name="details" id="details"  required placeholder="Details"> <%= education.details %> </textarea>
                   </p>
                   <p>
                     <button class="border-2 py-2 w-full my-2 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Save</button>
                   </p>
                 </form>
-                <form class="w-full mt-4 my-2" action="experience/education_delete" method="post">
+                <form class="w-full mt-4 my-2" action="experiences/education_delete" method="post">
                   <p class="hidden">
                     <input type="text" name="token" value="<%= token %>">
                     <input type="text" name="id" value="<%= education._id %>">
@@ -57,7 +57,7 @@
           <% } %>
         </div>
         <div x-show="show" class="flex items-center justify-center px-5 py-10">
-          <form action="experience/new_education" method="post" class="px-10 py-5 rounded-lg bg-slate-800 text-white">
+          <form action="experiences/new_education" method="post" class="px-10 py-5 rounded-lg bg-gray-800 text-white">
             <p class="hidden">
               <input type="text" value="<%= token %>" name="token" id="token" required>
             </p>
@@ -83,59 +83,65 @@
           </form>
         </div>
       </div>
-      <div x-data="{ show: false }" class="bg-purple-900">
-        <h1 class="text-center text-white text-2xl font-light my-4">Projects</h1>
-        <button x-show="!show" @click=" show = true " class="border-2 m-5 py-2 px-4 rounded-lg text-purple-600 border-purple-600 mt-4 hover:border-purple-400 focus:border-purple-400 hover:text-purple-400 focus:text-purple-400">New project</button>
+      <div x-data="{ show: false }" class="bg-white">
+        <h1 class="text-center text-gray-900 text-2xl font-light my-4">Projects</h1>
+        <button x-show="!show" @click=" show = true " class="border-2 m-5 py-2 px-4 rounded-lg text-gray-600 border-gray-600 mt-4 hover:border-gray-400 focus:border-gray-400 hover:text-gray-400 focus:text-gray-400">New project</button>
         <div x-show="!show" class="flex items-center justify-around gap-4 flex-wrap px-5 py-10">
-          <div class="bg-purple-700 text-purple-100 p-4 rounded-lg">
-            <form action="project/edit" method="post">
-              <p class="hidden">
-                <input type="text" name="token" id="token" required>
-              </p>
-              <p class="hidden">
-                <input type="text" name="id" id="id" required>
-              </p>
-              <p class="flex items-center justify-center">
-                <img src="" id="logo_project_" alt="logo_project" class="size-28 rounded-full p-2 border-2 border-white m-2">
-              </p>
-              <p>
-                <input onchange="logo_project_.src = this.value" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-purple-300 focus:ring-2 rounded-md my-2 ring-purple-500 outline-none" type="text" name="logo" id="logo" placeholder="Logo url" required>
-              </p>
-              <p>
-                <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-purple-300 focus:ring-2 rounded-md my-2 ring-purple-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
-              </p>
-              <p>
-                <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-purple-300 focus:ring-2 rounded-md my-2 ring-purple-500 outline-none" type="text" name="visit_link" id="visit_link" placeholder="Visit link" required>
-              </p>
-              <p>
-                <button class="border-2 py-2 w-full my-2 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Save</button>
-              </p>
-            </form>
-            <form class="w-full mt-4 my-2" action="project/delete" method="post">
-              <p class="hidden">
-                <input type="text" name="token" value="<%= //token %>">
-                <input type="text" name="id" value="<%= //project._id %>">
-              </p>
-              <button class="border-2 w-full py-2 px-4 rounded-lg text-red-300 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Delete</button>
-            </form>
-          </div>
+          <% if (projects.length == 0) { %>
+            <p class="text-2xl font-light text-red-500">No projects found!</p>
+          <% } else { %>
+            <% projects.forEach((project, i) => { %>
+              <div class="bg-gray-700 text-gray-100 p-4 rounded-lg">
+                <form action="experiences/project_update" method="post">
+                  <p class="hidden">
+                    <input type="text" value="<%= token %>" name="token" id="token" required>
+                  </p>
+                  <p class="hidden">
+                    <input type="text" value="<%= project._id %>" name="id" id="id" required>
+                  </p>
+                  <p class="flex items-center justify-center">
+                    <img id="logo_project_<%= i %>" src="<%= project.logo %>" alt="logo_project_<%= i %>" class="size-28 rounded-full p-2 border-2 border-white m-2">
+                  </p>
+                  <p>
+                    <input onchange="document.getElementById('logo_project_<%= i %>').src = this.value" value="<%= project.logo %>" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="logo" id="logo" placeholder="Logo url" required>
+                  </p>
+                  <p>
+                    <input value="<%= project.name %>" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
+                  </p>
+                  <p>
+                    <input value="<%= project.uri %>" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="visit_link" id="visit_link" placeholder="Visit link" required>
+                  </p>
+                  <p>
+                    <button class="border-2 py-2 w-full my-2 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Save</button>
+                  </p>
+                </form>
+                <form class="w-full mt-4 my-2" action="experiences/project_delete" method="post">
+                  <p class="hidden">
+                    <input type="text" name="token" value="<%= token %>">
+                    <input type="text" name="id" value="<%= project._id %>">
+                  </p>
+                  <button class="border-2 w-full py-2 px-4 rounded-lg text-red-300 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Delete</button>
+                </form>
+              </div>
+            <% }) %>
+          <% } %>
         </div>
         <div x-show="show" class="flex items-center justify-center px-5 py-10">
-          <form action="project/new" method="post" class="px-10 py-5 rounded-lg bg-purple-800 text-white">
+          <form action="experiences/new_project" method="post" class="px-10 py-5 rounded-lg bg-gray-800 text-white">
             <p class="hidden">
-              <input type="text" name="token" id="token" required>
+              <input type="text" value="<%= token %>" name="token" id="token" required>
             </p>
             <p class="flex items-center justify-center">
               <img src="" id="logo_project" alt="logo_project" class="size-28 rounded-full p-2 border-2 border-white m-2">
             </p>
             <p>
-              <input onchange="logo_project.src = this.value" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-purple-300 focus:ring-2 rounded-md my-2 ring-purple-500 outline-none" type="text" name="logo" id="logo" placeholder="Logo url" required>
+              <input onchange="logo_project.src = this.value" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="logo" id="logo" placeholder="Logo url" required>
             </p>
             <p>
-              <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-purple-300 focus:ring-2 rounded-md my-2 ring-purple-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
+              <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
             </p>
             <p>
-              <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-purple-300 focus:ring-2 rounded-md my-2 ring-purple-500 outline-none" type="text" name="visit_link" id="visit_link" placeholder="Visit link" required>
+              <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="visit_link" id="visit_link" placeholder="Visit link" required>
             </p>
             <p class="flex gap-4 flex-wrap items-center justify-center">
               <button @click=" show = false " type="button" class="border-2 w-[45%] max-w-full py-2 px-4 rounded-lg text-red-300 mt-4 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Cancel</button>
@@ -144,7 +150,10 @@
           </form>
         </div>
       </div>
-      <div class="bg-orange-200">R</div>
+      <div class="bg-gray-900">
+        <h1 class="text-center text-white text-2xl font-light my-4">Reviews</h1>
+        
+      </div>
     </div>
     
 </body>
