--- a/app_/views/layouts/header.ejs
+++ b/app_/views/layouts/header.ejs
@@ -1,7 +1,7 @@
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<link rel="shortcut icon" href="../../imgs/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="../../../imgs/logo.png" type="image/x-icon">
 <!-- <link rel="stylesheet" href="../../styles/app.css" /> -->
 <script src="https://cdn.tailwindcss.com"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
